static/style.css
/* ... */
.login-image{
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

.login-image img{
    width: 100%; /* Let the browser adjust width based on height to maintain aspect ratio */
    max-width: none; /* Remove any maximum width constraints */
    height: auto; /* Match the height of the container */
}

  /* Creates a box for the login form to go on */
.login-box {
    padding: 20px;
    background-color: #c2ffdd;
    flex-direction: column;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
  }

  /* Makes the login text better formatted within the loginBox */
.user-login {
  text-align: center;
  font-size: 20px;
  color: black;
  font-family: 'Roboto Mono', monospace;
  justify-content: center;
  align-items: center;
}

/* The header for each page, makes it look bigger and centered */
.title {
  text-align: center;
  font-size: 40px;
  font-family: 'Metrophobic', monospace;
  color: white;
  margin-top: 10px;
  
}

.login-text{
    font-family: 'Roboto Mono', monospace;
    margin-top: -30px;
    margin-bottom: 20px;
}

.login-field {
    font-family: "Roboto Mono", monospace;
    border-radius: 10px;
    padding: 5px;
    border-width: 2px;
    border-style: solid;
    border-color: #ddd;
}

.login-buttons{
    flex-direction: column;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Changes the input button to look better with no border and a better font */
input[type = submit] {
  padding: 5px 15px;
  border: 0 none;
  margin: 5px;
  font-family: 'Roboto Mono', monospace;
}

/* The button that takes you between the login page and the register page */
.register-button {
  font-family: 'Montserrat', sans-serif;
  color: #27a8ee;
}


.flashes {
  display: flex;
  font-family: 'Roboto Mono', monospace;
  text-align: justify;
  width: 10vw;
  border-radius: 10px;
  margin: 20px auto 0;
  align-items: center;
}

.flashes p {
  flex: 1;
  margin: 0;
  text-align: center;
  padding: 15px;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  white-space: nowrap;
}

.flashes span {
  margin-left: auto;
  padding: 13px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  font-size: 25px;
  transition: 0.1s;
}

.flashes span:hover {
  font-size: 30px;
  padding: 10.5px;
  cursor:pointer;
}

.info,
.error {
  color: white;
  border: 3px solid white;
}

.info {
  background-color: #000;
}

.error {
  background-color: red;
}

.main-screen {
  height: 650px;
  padding-top: 1px;
  background-color: #18637B;
  border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px;
}

.help-screen {
  height: 650px;
  margin-top: 10px;
  padding-top: 10px;
  background-color: #3B8D61;
  border-radius: 25px;
}

.steps {
  font-family: 'Montserrat', sans-serif;
  font-size: 35px;
  text-align: center;
  color: #ddd;
  padding-left: 10px;
  padding-right: 10px;
}

.help-title {
  font-family: 'Montserrat', sans-serif;
  font-size: 50px;
  text-align: center;
  color: #ddd;
}

/* Adds a bottom bar to every page for the copyright information */
.bottom-bar {
  display: flex;
  justify-content: space-between; /* Align items to the start and end of the container */
  align-items: center;
  position: fixed;
  bottom: -90px;
  width: 100%;
  background-color: #9FFFCB;
  padding: 10px;
  overflow: hidden;
  transition: bottom 0.3s;
  z-index: 1;
}

.bottom-bar.visible {
  bottom: 0; /* Move the footer back to its original position */
}

.main-creators {
  font-family: 'Montserrat', sans-serif;
  font-size: 10px;
  display: flex;
  color: #000000;
  padding-left: 10px;
  padding-right: 10px;
}

.dashboard-container{
  display: flex;
  justify-content: center;
  align-items: flex-start;
  margin-top: 25px;
  margin-bottom: 100px;
}

@keyframes slideinLeft {
    from {
        display: none;
    }
    to{
        transform: translateX(0);
        display: flex;
    }

}

.left-widget {
    flex-direction: column;
    float: left;
    background-color: #c2ffdd;
    border-radius: 15px;
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
    width: 50vw;
    max-height: 100vw;
    overflow: auto;
    padding: 20px;
    display: none;
    transform: translateX(-200%);
}

.left-widget.visible{
    display: flex;
    animation: slideinLeft 0ms forwards;
}

.right-widgets {
    display: flex; /* Remove flex: 1 */
    flex-direction: column;
    justify-content: space-between;
}

.class-widget{

    background-color: #c2ffdd;
    width: 600px;
    border-radius: 15px;
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
    padding: 20px;
    transition: transform 0.3s ease-in-out;
    flex: 1; /* Add flex: 1 */
    margin-left: 30px; /* Add margin-left */
    text-align: center;
    font-size: 25px;
    margin-bottom: 30px;
    display: block;

}


@keyframes fadeout {
    from {
        display: block;
    }
    to {
        opacity: 0;
    }
}

.class-widget.fadeout{
    animation: fadeout 250ms;
    display: none;
}


@keyframes slideinRightClass {
    from {
        display: none;
    }
    to{
        transform: translateX(0);
        display: block;
    }

}

.class-widget.visible{
    background-color: #c2ffdd;
    width: 300px;
    border-radius: 15px;
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
    padding: 20px;
    transition: transform 0.3s ease-in-out;
    flex: 1; /* Add flex: 1 */
    margin-left: 30px; /* Add margin-left */
    text-align: center;
    margin-bottom: 30px;
    display: block;
    animation: slideinRightClass 0ms forwards;
    font-size: 15px;
}

@keyframes slideinRight {
    from {
        transform: translateX(200%);
        display: none;
    }
    to{
        transform: translateX(0);
        display: flex;
    }

}
/* ... */

